# cem-script

./: .0pdd.yml  .envrc  .ghci  .ghcid  .gitignore  .hlint.yaml  Makefile  README.md  cabal.project  cabal.project.freeze  cem-script.cabal  docker-compose.devnet.yaml  flake.nix  matchingTx.json  oura.nix  prepare-devnet.sh  tx.json
.github/workflows/: haskell-ci.yml
devnet/: genesis-byron.json  genesis-byron.json.bak  genesis-shelley.json  genesis-shelley.json.bak
docs/: arch_principles.md  backends_comparsion.md  catalyst_milestone_reports.md  examples.md  getting-started.md  getting_started.md  goals_and_design.md  goals_and_soa.md  non_cardano_soa.md  tech_debt.md
docs/haddocks/: doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index.html  doc-index.json  index.html
docs/haddocks/cem-script/: Cardano-CEM-Documentation.html  Cardano-CEM-Examples-Auction.html  Cardano-CEM-Examples-Compilation.html  Cardano-CEM-Examples-Voting.html  Cardano-CEM-Monads-CLB.html  Cardano-CEM-Monads-L1.html  Cardano-CEM-Monads-L1Commons.html  Cardano-CEM-Monads.html  Cardano-CEM-OffChain.html  Cardano-CEM-OnChain.html  Cardano-CEM-Stages.html  Cardano-CEM-Testing-StateMachine.html  Cardano-CEM.html  Cardano-Extras.html  Data-Spine.html  Plutus-Deriving.html  Plutus-Extras.html  cem-script.haddock  doc-index.json
docs/haddocks/cem-script/src/: Cardano.CEM.Documentation.html  Cardano.CEM.Examples.Auction.html  Cardano.CEM.Examples.Compilation.html  Cardano.CEM.Examples.Voting.html  Cardano.CEM.Monads.CLB.html  Cardano.CEM.Monads.L1.html  Cardano.CEM.Monads.L1Commons.html  Cardano.CEM.Monads.html  Cardano.CEM.OffChain.html  Cardano.CEM.OnChain.html  Cardano.CEM.Stages.html  Cardano.CEM.Testing.StateMachine.html  Cardano.CEM.html  Cardano.Extras.html  Plutus.Deriving.html  Plutus.Extras.html
docs/haddocks/cem-script/src/src/: Data.Spine.html
docs/haddocks/ghc/src/: GHC.Builtin.Names.TH.html  GHC.Builtin.Names.html  GHC.Builtin.PrimOps.Casts.html  GHC.Builtin.PrimOps.Ids.html  GHC.Builtin.PrimOps.html  GHC.Builtin.Types.Literals.html  GHC.Builtin.Types.Prim.html  GHC.Builtin.Types.html  GHC.Builtin.Uniques.html  GHC.Builtin.Utils.html  GHC.ByteCode.Asm.html  GHC.ByteCode.InfoTable.html  GHC.ByteCode.Instr.html  GHC.ByteCode.Linker.html  GHC.ByteCode.Types.html  GHC.Cmm.BlockId.html  GHC.Cmm.CLabel.html  GHC.Cmm.CallConv.html  GHC.Cmm.CommonBlockElim.html  GHC.Cmm.ContFlowOpt.html  GHC.Cmm.Dataflow.Block.html  GHC.Cmm.Dataflow.Collections.html  GHC.Cmm.Dataflow.Graph.html  GHC.Cmm.Dataflow.Label.html  GHC.Cmm.Dataflow.html  GHC.Cmm.DebugBlock.html  GHC.Cmm.Dominators.html  GHC.Cmm.Expr.html  GHC.Cmm.Graph.html  GHC.Cmm.Info.Build.html  GHC.Cmm.Info.html  GHC.Cmm.InitFini.html  GHC.Cmm.LRegSet.html  GHC.Cmm.LayoutStack.html  GHC.Cmm.Lint.html  GHC.Cmm.Liveness.html  GHC.Cmm.MachOp.html  GHC.Cmm.Node.html  GHC.Cmm.Opt.html  GHC.Cmm.Parser.Monad.html  (+641 more)
example/CEM/Example/: Auction.hs  Compiled.hs  Voting.hs
lib/cardano-extras/Cardano/: Extras.hs
lib/cardano-extras/Plutarch/: Extras.hs
lib/cardano-extras/Plutus/: Extras.hs
lib/data-spine/Data/: Spine.hs
src-lib/cardano-extras/Cardano/: Extras.hs
src-lib/cardano-extras/Plutus/: Deriving.hs  Extras.hs
src-lib/data-spine/Data/: Spine.hs
src/Cardano/: CEM.hs
src/Cardano/CEM/: Address.hs  Compile.hs  Constraints.hs  DSL.hs  DSLSmart.hs  Documentation.hs  Indexing.hs  Monads.hs  OffChain.hs  OnChain.hs  OuraConfig.hs  Smart.hs  Stages.hs  TH.hs
src/Cardano/CEM/Examples/: Auction.hs  Compilation.hs  Escrow.hs  Voting.hs
src/Cardano/CEM/Indexing/: Event.hs  Oura.hs  Tx.hs
src/Cardano/CEM/Monads/: CLB.hs  L1.hs  L1Commons.hs
src/Cardano/CEM/Testing/: StateMachine.hs
src/Plutus/: Extras.hs
test/: Auction.hs  Dynamic.hs  Main.hs  OffChain.hs  Oura.hs  OuraFilters.hs  TestNFT.hs  Utils.hs  Voting.hs  daemon.toml
test/CEM/Test/: Auction.hs  Dynamic.hs  OffChain.hs  TestNFT.hs  Utils.hs  Voting.hs
test/CEM/Test/Oura/: Communication.hs
test/CEM/Test/OuraFilters/: Auction.hs  Mock.hs  Simple.hs
test/Oura/: Communication.hs  Config.hs  Run.hs
test/OuraFilters/: Auction.hs  Mock.hs  Simple.hs
