cabal-version: 3.8
name:          cem-script
version:       0.1.0
synopsis:      Cardano DApp SDK
homepage:      https://github.com/cem-script
author:        MLabs
maintainer:    gregory@mlabs.city
data-files:    README.md
tested-with:   GHC ==9.6.3

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

common common-lang
  -- Options from MLabs styleguide

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-deriving-strategies -Wno-redundant-constraints

  if !flag(dev)
    ghc-options: -Werror

  build-depends:
    , base
    , mtl
    , transformers

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoPolyKinds
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  if flag(dev)
    default-extensions: PartialTypeSignatures

  default-language:   GHC2021

common common-onchain
  import:        common-lang
  build-depends:
    , plutarch
    , plutarch-extra
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api    ^>=1.23.0.0
    , plutus-tx
    , plutus-tx-plugin
    , template-haskell
    , th-abstraction       >=0.6.0.0

  if !flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations
  -- (some are enabled additionaly in individual modules)

  ghc-options:
    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0 -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialize -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields -fno-full-laziness -fno-spec-constr
    -fno-strictness -fno-unbox-small-strict-fields

common common-offchain
  import:        common-lang

  -- Cardano-api:internal required due to:
  -- https://github.com/IntersectMBO/cardano-api/issues/502
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-api:internal
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , filepath
    , ouroboros-network-protocols
    , pretty-show
    , retry
    , text
    , time
    , unix

common common-executable
  import:      common-offchain
  ghc-options: -threaded -rtsopts

library data-spine
  import:          common-lang
  hs-source-dirs:  src-lib/data-spine
  build-depends:
    , singletons
    , template-haskell

  exposed-modules: Data.Spine

library cardano-extras
  import:
    common-offchain,
    common-onchain

  hs-source-dirs:  src-lib/cardano-extras
  build-depends:   template-haskell
  exposed-modules:
    Cardano.Extras
    Plutus.Deriving
    Plutus.Extras

library
  import:
    common-onchain,
    common-offchain

  hs-source-dirs:  src/
  exposed-modules:
    Cardano.CEM
    Cardano.CEM.Documentation
    Cardano.CEM.Examples.Auction
    Cardano.CEM.Examples.Compilation
    Cardano.CEM.Examples.Voting
    Cardano.CEM.Monads
    Cardano.CEM.Monads.CLB
    Cardano.CEM.Monads.L1
    Cardano.CEM.OffChain
    Cardano.CEM.OnChain
    Cardano.CEM.Stages
    Cardano.CEM.Testing.StateMachine
    Cardano.CEM.TH

  other-modules:   Cardano.CEM.Monads.L1Commons
  build-depends:
    , cem-script:cardano-extras
    , cem-script:data-spine
    , clb
    , dependent-map
    , ouroboros-consensus
    , QuickCheck
    , quickcheck-dynamic
    , singletons-th

test-suite cem-sdk-test
  import:
    common-onchain,
    common-offchain,

  type:           exitcode-stdio-1.0
  ghc-options:   -threaded -Wno-missing-signatures -Wno-incomplete-uni-patterns
  build-depends:
    , cem-script
    , cem-script:cardano-extras
    , cem-script:data-spine
    , clb
    , dependent-map
    , hspec
    , hspec-core
    , QuickCheck
    , quickcheck-dynamic
    , random
    , network
    , directory
    , toml-parser
    , process
    , async

  hs-source-dirs: test/
  other-modules:
    Auction
    Dynamic
    OffChain
    TestNFT
    Utils
    Voting
    Oura
    Oura.Communication
    Oura.Config
    OuraFilters
    OuraFilters.Auction

  main-is:        Main.hs
