cabal-version: 3.8
name:          cem-script
version:       0.1.0
synopsis:      CEM Script - a Cardano dApp SDK
homepage:      https://github.com/mlabs-haskell/cem-script
author:        MLabs
maintainer:    ilia@mlabs.city
data-files:    README.md
tested-with:   GHC ==9.6.3

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

flag force-recomp
  description: Compile with -fforce-recomp and -Wunused-packages
  default:     False

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-deriving-strategies -Wno-redundant-constraints

  if !flag(dev)
    ghc-options: -Werror

  if flag(dev)
    default-extensions: PartialTypeSignatures

  if flag(force-recomp)
    ghc-options: -fforce-recomp -Wunused-packages

  build-depends:
    , base
    , containers
    , extra
    , mtl
    , transformers

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    StrictData
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

common common-onchain
  import:        common-lang
  build-depends:
    , plutarch
    , plutarch-extra
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api    ^>=1.23.0.0
    , plutus-tx
    , plutus-tx-plugin
    , template-haskell
    , th-abstraction       >=0.6.0.0

  if !flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations
  -- (some are enabled additionaly in individual modules)

  ghc-options:
    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0 -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-specialize -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields -fno-full-laziness -fno-spec-constr
    -fno-strictness -fno-unbox-small-strict-fields

common common-offchain
  import:        common-lang

  -- Cardano-api:internal required due to:
  -- https://github.com/IntersectMBO/cardano-api/issues/502
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , cardano-api:internal
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , filepath
    , ouroboros-network-protocols
    , pretty-show
    , prettyprinter
    , retry
    , singletons-th
    , text
    , time
    , unix

common common-executable
  import:      common-offchain
  ghc-options: -threaded -rtsopts

library data-spine
  import:          common-lang
  hs-source-dirs:  src-lib/data-spine

  -- FIXME: was not meant to be dependent on Plutus...
  build-depends:
    , plutus-tx
    , singletons
    , template-haskell

  exposed-modules: Data.Spine

library cardano-extras
  import:
    common-offchain,
    common-onchain

  hs-source-dirs:  src-lib/cardano-extras
  build-depends:   template-haskell
  exposed-modules:
    Cardano.Extras
    Plutarch.Extras
    Plutus.Extras

library
  import:
    common-onchain,
    common-offchain

  hs-source-dirs:  src/
  exposed-modules:
    Cardano.CEM
    Cardano.CEM.Address
    Cardano.CEM.Documentation
    Cardano.CEM.DSL
    Cardano.CEM.Examples.Auction
    Cardano.CEM.Examples.Compilation
    Cardano.CEM.Examples.Voting
    Cardano.CEM.Indexing.Event
    Cardano.CEM.Indexing.Oura
    Cardano.CEM.Indexing.Tx
    Cardano.CEM.Monads
    Cardano.CEM.Monads.CLB
    Cardano.CEM.OffChain
    Cardano.CEM.OnChain
    Cardano.CEM.Testing.StateMachine
    Cardano.CEM.TH

  other-modules:   Cardano.CEM.Monads.L1Commons
  build-depends:
    , base16
    , base64
    , cem-script:cardano-extras
    , cem-script:data-spine
    , clb
    , dependent-map
    , lens
    , ouroboros-consensus
    , QuickCheck
    , quickcheck-dynamic
    , safe
    , singletons-th
    , toml-parser
    , vector

test-suite cem-sdk-test
  import:
    common-onchain,
    common-offchain,

  type:           exitcode-stdio-1.0
  ghc-options:
    -threaded -Wno-missing-signatures -Wno-incomplete-uni-patterns

  build-depends:
    , aeson
    , async
    , base16
    , base32
    , base64
    , cardano-api
    , cardano-ledger-core
    , cem-script
    , cem-script:cardano-extras
    , cem-script:data-spine
    , clb
    , dependent-map
    , directory
    , hspec
    , hspec-core
    , lens
    , network
    , process
    , QuickCheck
    , quickcheck-dynamic
    , random
    , safe
    , toml-parser
    , vector

  hs-source-dirs: test/
  other-modules:
    Auction
    Dynamic
    OffChain
    Oura.Communication
    OuraFilters.Auction
    OuraFilters.Mock
    OuraFilters.Simple
    TestNFT
    Utils
    Voting

  main-is:        Main.hs
